tests/should_fail/lone_end.nds
-- `end if` with no preceding `if`.
end if
